<?xml version="1.0"?>
<package>
  <name>grid_map_maker</name>
  <version>1.0.0</version>
  <description>segmentation</description>

  <maintainer email="liujiaxi17@163.com">Liu</maintainer>
  <author>Liu</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_msgs</build_depend>


  <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_msgs</run_depend>


</package>
